; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/oprofile/extr_op_model_mpcore.c_em_call_function.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/oprofile/extr_op_model_mpcore.c_em_call_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.em_function_data = type { i32 (...)*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32 ()*)* @em_call_function to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @em_call_function(i32 ()* %0) #0 {
  %2 = alloca i32 ()*, align 8
  %3 = alloca %struct.em_function_data, align 8
  store i32 ()* %0, i32 ()** %2, align 8
  %4 = load i32 ()*, i32 ()** %2, align 8
  %5 = bitcast i32 ()* %4 to i32 (...)*
  %6 = getelementptr inbounds %struct.em_function_data, %struct.em_function_data* %3, i32 0, i32 0
  store i32 (...)* %5, i32 (...)** %6, align 8
  %7 = getelementptr inbounds %struct.em_function_data, %struct.em_function_data* %3, i32 0, i32 1
  store i32 0, i32* %7, align 8
  %8 = call i32 (...) @preempt_disable()
  %9 = call i32 @smp_call_function(i32 (%struct.em_function_data*)* @em_func, %struct.em_function_data* %3, i32 1)
  %10 = call i32 @em_func(%struct.em_function_data* %3)
  %11 = call i32 (...) @preempt_enable()
  %12 = getelementptr inbounds %struct.em_function_data, %struct.em_function_data* %3, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  ret i32 %13
}

declare dso_local i32 @preempt_disable(...) #1

declare dso_local i32 @smp_call_function(i32 (%struct.em_function_data*)*, %struct.em_function_data*, i32) #1

declare dso_local i32 @em_func(%struct.em_function_data*) #1

declare dso_local i32 @preempt_enable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
